--- a/app/src/main/res/layout/dialog_pilih_anak.xml
+++ b/app/src/main/res/layout/dialog_pilih_anak.xml
@@ -7,16 +7,16 @@
     android:background="@color/white_trans"
     android:layout_height="wrap_content">
 
-    <ImageButton
-        android:layout_marginTop="24dp"
-        android:layout_marginStart="24dp"
-        android:id="@+id/btn_filter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/round_btn_black"
-        android:src="@drawable/ic_filter_white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+<!--    <ImageButton-->
+<!--        android:layout_marginTop="24dp"-->
+<!--        android:layout_marginStart="24dp"-->
+<!--        android:id="@+id/btn_filter"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@drawable/round_btn_black"-->
+<!--        android:src="@drawable/ic_filter_white"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
     <EditText
         android:layout_marginEnd="24dp"
@@ -35,10 +35,10 @@
         android:textColor="@color/black"
         android:textColorHint="@color/text_placeholder"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_filter"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btn_filter"
-        app:layout_constraintTop_toTopOf="@+id/btn_filter" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_anak"
