--- a/app/src/main/res/layout/fragment_anak.xml
+++ b/app/src/main/res/layout/fragment_anak.xml
@@ -11,11 +11,14 @@
         android:id="@+id/imageView2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/ornament_anak"
         android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ornament_anak"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <View
         android:layout_width="48dp"
@@ -43,9 +46,9 @@
         style="@style/BaseHelvRoman.TextPlaceholder"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24sp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="24sp"
         android:background="@drawable/search_box"
         android:drawableStart="@drawable/ic_search"
         android:drawablePadding="16dp"
@@ -58,7 +61,7 @@
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_filter" />
+        app:layout_constraintTop_toBottomOf="@id/btn_filter" />
 
     <View
         android:id="@+id/view3"
