--- a/app/src/main/res/layout/fragment_terapi.xml
+++ b/app/src/main/res/layout/fragment_terapi.xml
@@ -222,6 +222,7 @@
                     android:textColor="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     tools:text="Template A" />
 
