--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="soft_grey">#e7e7e7</color>
     <color name="colorBlackTrans">#59111011</color>
     <color name="red">#FF006F</color>
+    <color name="orange_trans">#4DFDC763</color>
 </resources>
