--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="colorBlackTrans">#59111011</color>
     <color name="red">#FF006F</color>
     <color name="orange_trans">#4DFDC763</color>
+    <color name="pastel">#fffcf6</color>
 </resources>
