--- a/app/src/main/res/layout/activity_data_terapi.xml
+++ b/app/src/main/res/layout/activity_data_terapi.xml
@@ -1,68 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.anak.AnakFragment">
+    tools:context=".ui.anak.detail.DataTerapiActivity">
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
         android:src="@drawable/ornament_anak"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:adjustViewBounds="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <ImageView
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:src="@drawable/logo"
-        android:background="@color/white"
-        android:layout_marginEnd="24dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/btn_filter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/btn_back"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/btn_square_round"
-        android:padding="12dp"
-        android:src="@drawable/ic_filter_black"
+        android:layout_marginBottom="24dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:src="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/edt_search"
-        style="@style/BaseHelvRoman.TextPlaceholder"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/tv_title"
+        style="@style/BaseHelvHeavy.TitleText.AppBar"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24sp"
-        android:background="@drawable/search_box"
-        android:drawableStart="@drawable/ic_search"
-        android:drawablePadding="16dp"
-        android:hint="Cari Anak"
-        android:inputType="text"
-        android:maxLines="1"
-        android:padding="16dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/text_placeholder"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_filter" />
+        android:text="Data Terapi"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
+        app:layout_constraintStart_toEndOf="@+id/btn_back"
+        app:layout_constraintTop_toTopOf="@+id/btn_back" />
 
     <View
         android:id="@+id/view3"
@@ -73,17 +48,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_search" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
     <TextView
         android:id="@+id/state_empty"
         style="@style/BaseHelvRoman"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Belum ada Data Anak disini :("
+        android:text="Belum ada Data Hasil Terapi disini :("
         android:textAlignment="center"
         android:textColor="@color/text_disable"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,7 +75,7 @@
         android:layout_marginTop="16dp"
         >
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_anak"
+            android:id="@+id/rv_hasil_terapi"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_width="match_parent"
@@ -109,18 +84,5 @@
             tools:listitem="@layout/item_anak"
             />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:backgroundTint="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_add"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        app:tint="@color/white" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
