--- a/app/src/main/res/layout/activity_tentang.xml
+++ b/app/src/main/res/layout/activity_tentang.xml
@@ -41,11 +41,12 @@
         app:layout_constraintStart_toEndOf="@+id/btn_back"
         app:layout_constraintTop_toTopOf="@+id/btn_back" />
 
-    <View
+    <ImageView
         android:id="@+id/view7"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="@color/white"
+        android:src="@drawable/logo"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
