--- a/app/src/main/res/layout/fragment_materi.xml
+++ b/app/src/main/res/layout/fragment_materi.xml
@@ -17,9 +17,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
+    <ImageView
         android:id="@+id/view2"
         android:layout_width="48dp"
+        android:src="@drawable/logo"
         android:layout_height="48dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
