--- a/app/src/main/res/layout/fragment_terapi.xml
+++ b/app/src/main/res/layout/fragment_terapi.xml
@@ -26,7 +26,7 @@
             android:layout_height="48dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
-            android:background="@mipmap/ic_launcher_new"
+            android:background="@drawable/logo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
