--- a/app/src/main/res/layout/activity_detail_anak.xml
+++ b/app/src/main/res/layout/activity_detail_anak.xml
@@ -115,22 +115,45 @@
                 app:layout_constraintStart_toEndOf="@+id/img_profil" />
 
 
+            <TextView
+                android:id="@+id/tv_created_at"
+                style="@style/BaseHelvRoman"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="16dp"
+                android:text="Created At"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/img_profil" />
+
+            <TextView
+                android:layout_marginTop="8dp"
+                android:id="@+id/tv_updated_at"
+                style="@style/BaseHelvRoman"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:text="Updated At"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_created_at" />
+
             <EditText
                 android:id="@+id/edt_nama"
                 style="@style/BaseHelvRoman"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="40dp"
                 android:layout_marginEnd="24dp"
                 android:hint="Nama Lengkap"
                 android:inputType="text"
                 android:maxLines="1"
+                android:layout_marginTop="24dp"
                 android:textColor="@color/black"
                 android:textColorHint="@color/text_placeholder"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/img_profil" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_updated_at" />
 
             <EditText
                 android:id="@+id/edt_tempat_lahir"
