--- a/app/src/main/res/layout/item_anak.xml
+++ b/app/src/main/res/layout/item_anak.xml
@@ -67,6 +67,30 @@
             app:layout_constraintStart_toEndOf="@+id/img_anak"
             app:layout_constraintTop_toBottomOf="@+id/tv_ttl" />
 
+        <TextView
+            android:id="@+id/tv_created_at"
+            style="@style/BaseGillSansMedium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Dibuat Pada"
+            android:textColor="@color/text_disable"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_address" />
+
+        <TextView
+            android:id="@+id/tv_updated_at"
+            android:layout_marginTop="8dp"
+            style="@style/BaseGillSansMedium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Terakhir diperbarui"
+            android:textColor="@color/text_disable"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_created_at" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
